# fitsheaderc99

./: meson.build
include/: fitsheader.h  meson.build
src/: hget.c  hput.c  meson.build
test/: meson.build
tests/: main.c
